--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.auth0:java-jwt:4.4.0'
+
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
