--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ publishing {
         maven(MavenPublication) {
             groupId = 'ua.com.radiokot.license'
             artifactId = 'keys'
-            version = '0.0.1'
+            version = '1.0.0-rc.1'
 
             pom {
                 name = 'Offline License Keys'
