Try to make Base64 compatible with Android < 26

--- a/build.gradle
+++ b/build.gradle
@@ -57,20 +57,14 @@ test {
     useJUnitPlatform()
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = '1.8'
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = '1.8'
-}
+compileKotlin.kotlinOptions.jvmTarget = '1.8'
+compileTestKotlin.kotlinOptions.jvmTarget = '1.8'
 
 java {
     withSourcesJar()
     withJavadocJar()
 
     sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
 }
 
 dokkaJavadoc {
