--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.auth0:java-jwt:4.4.0'
+    implementation('com.auth0:java-jwt:3.19.2') {
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+    }
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
